--- a/client/src/components/CarContent.module.css
+++ b/client/src/components/CarContent.module.css
@@ -38,10 +38,21 @@ button {
     z-index: 10;
     margin-bottom: 50px;
 }
+.dragDropContainer button {
+    margin-bottom: 50px;
+}
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     padding: 100px 0;
+}
+.databaseImages {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 90%;
+}
+.databaseImages img {
+    justify-self: center;
 }
