--- a/client/src/components/CarContent.module.css
+++ b/client/src/components/CarContent.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 100px;
+    /* padding: 100px; */
 }
 input {
     height: 40px;
@@ -46,13 +46,45 @@ button {
     flex-direction: column;
     align-items: center;
     position: relative;
-    padding: 100px 0;
+    padding: 20px 0;
+    padding-top: 100px;
 }
 .databaseImages {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    width: 90%;
+    width: 70%;
 }
 .databaseImages img {
     justify-self: center;
+}
+.carData {
+    width: max-content;
+    height: 150px;
+    background-color: rgba(128, 128, 128, 0.363);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-right: 10px;
+    margin-bottom: 60px;
+    border: 1px solid white;
+}
+
+.carData p {
+    font-size: 16px;
+    font-weight: 700;
+    padding: 5px 50px;
+}
+.data {
+    margin-left: 10px;
+    font-weight: 400;
+    font-style: italic;
+}
+.carDisplayGridBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    /* aspect-ratio: 15/9; */
 }
